# interlaken

./: .gitignore  CHANGELOG.md  hie.yaml  interlaken.cabal  run-server  run-tests  shell.nix  start
app/: Database.hs  Layout.hs  Login.hs  Main.hs  Route.hs  SignUp.hs  Types.hs
db/: schema.sql
db/migrations/: 20220628034935_create_users_table.sql
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: Dashboard.hs  Database.hs  Development.hs  Email.hs  Layout.hs  Login.hs  Parser.hs  Path.hs  Route.hs  Server.hs  SignUp.hs  Types.hs
static/development/: hot-reload.js
test/: Main.hs  ParserSpec.hs
