cabal-version:      2.4
name:               interlaken
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             John Yoder
maintainer:         jcyoder@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

executable interlaken
  main-is:            Main.hs
  other-modules:
    Layout
    Login
    Types

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  build-depends:
    , base                   ^>=4.15.1.0
    , blaze-html
    , http-types
    , protolude
    , scotty
    , sqlite-simple
    , text
    , wai
    , wai-extra
    , wai-middleware-static
    , wai-websockets
    , warp
    , websockets

  hs-source-dirs:     app
  default-language:   Haskell2010
