cabal-version:      2.4
name:               interlaken
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             John Yoder
maintainer:         jcyoder@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

library lib
  ghc-options:        -Wall
  exposed-modules:
    Dashboard
    Database
    Development
    Email
    Layout
    Login
    Parser
    Path
    Route
    Server
    SignUp
    Types

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  build-depends:
    , base                   ^>=4.15.1.0
    , bcrypt
    , blaze-html
    , http-types
    , megaparsec
    , protolude
    , scotty
    , sqlite-simple
    , string-conversions
    , text
    , uuid
    , wai
    , wai-extra
    , wai-middleware-static
    , wai-session
    , wai-websockets
    , warp
    , websockets

  hs-source-dirs:     lib
  default-language:   Haskell2010

executable interlaken
  main-is:            Main.hs
  ghc-options:        -Wall
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  build-depends:
    , lib
    , protolude

  hs-source-dirs:     app
  default-language:   Haskell2010

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -Wall
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  other-modules:
    ParserSpec
    Spec

  build-depends:
    , base
    , containers
    , hspec
    , hspec-discover
    , lib
    , megaparsec
    , protolude
    , text

  default-language:   Haskell2010
